# hatch-semver

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.githooks/: pre-commit
.github/workflows/: ci.yml  develop.yml  lint.yml  master_pr_closed.yml  user-doc.yml
CHANGELOG/: index.html
api-docs/hatch_semver/: bump_instruction.html  errors.html  index.html  semver_scheme.html
api-docs/hatch_semver/plugin/: hooks.html  index.html
changelog.d/: 1.detail.md  10.fixed.md  12.fixed.md  14.fixed.md  16.fixed.md  17.fixed.md  18.fixed.md  19.unimportant.md  2.detail.md  22.fixed.md  23.feature.md  25.doc.md  27.doc.md  29.doc.md  31.doc.md  33.unimportant.md  35.doc.md  36.doc.md  4.fixed.md  44.doc.md  46.unimportant.md  47.unimportant.md  49.doc.md  51.unimportant.md  53.doc.md  57.feature.md  59.doc.md  61.unimportant.md  62.unimportant.md  63.unimportant.md  64.doc.md  75.feature.md  76.doc.md  77.doc.md  78.doc.md  79.unimportant.md  8.doc.md  90.fixed.md
docs/: CHANGELOG.md  index.md
docs/hatch_semver/: bump_instruction.html  semver_scheme.html
docs/hatch_semver/plugin/: hooks.html
docs/user-docs/: CHANGELOG.md  README.md
docs/user_guide/: 1-commands.md  2-migrating-to-semver.md
search/: search_index.json
src/hatch-semver/: __about__.py  semver_scheme.py
src/hatch-semver/plugin/: hooks.py
src/hatch_semver/: __about__.py  __init__.py  bump_instruction.py  errors.py  semver_scheme.py
src/hatch_semver/plugin/: hooks.py
tests/: conftest.py  test_about.py  test_bump_instruction.py  test_changelog.py  test_hooks.py  test_semver_scheme.py
user-docs/: CHANGELOG.md
user-docs/user_guide/: 1-commands.md
user_guide/1-commands/: index.html
user_guide/2-migrating-to-semver/: index.html
